src/objects/Business_Planning_Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Business_Planning_ID__c</fullName>
        <label>Business Planning ID</label>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipName>RWE_Forecast</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimate_Amount__c</fullName>
        <label>Estimated Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_Date__c</fullName>
        <label>Estimated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_Actuals_TF__c</fullName>
        <label>Quarter_Actuals_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Indication_Actuals_TF__c</fullName>
        <label>Quarter Indication - Actuals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(MONTH(  Estimate_Date__c ), 
1, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q1&quot; , 
2, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q1&quot;, 
3, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q1&quot;, 
4, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q2&quot;, 
5, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q2&quot;, 
6, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q2&quot;, 
7, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q3&quot;, 
8, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q3&quot;, 
9, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q3&quot;, 
10, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q4&quot;, 
11, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q4&quot;, 
12, TEXT(YEAR(Estimate_Date__c))&amp;&quot;-Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>V0_Amount__c</fullName>
        <description>This is created for holding snapshot of Amount</description>
        <label>V0 Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>V0_Date__c</fullName>
        <description>This is created to hold the value of Estimated Date</description>
        <label>V0 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>V0_Quarter__c</fullName>
        <formula>CASE(MONTH( V0_Date__c), 
1, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q1&quot; , 
2, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q1&quot;, 
3, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q1&quot;, 
4, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q2&quot;, 
5, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q2&quot;, 
6, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q2&quot;, 
7, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q3&quot;, 
8, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q3&quot;, 
9, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q3&quot;, 
10, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q4&quot;, 
11, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q4&quot;, 
12, TEXT(YEAR(V0_Date__c))&amp;&quot;-Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V0 Quarter</label>
        <type>Text</type>
    </fields>
    <label>Business Plan Forecast</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plan Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>